// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slideshow renders correctly with a list of more 1`] = `
<div>
  <div
    class="slide-container"
  >
    <div
      aria-roledescription="carousel"
      dir="ltr"
    >
      <div
        class="react-slideshow-container "
      >
        <button
          aria-label="Previous Slide"
          class="isFullscreen nav "
          css="[object Object]"
          data-type="prev"
          tabindex="10"
          type="button"
        >
          «
        </button>
        <div
          class="react-slideshow-fadezoom-wrapper "
        >
          <div
            class="react-slideshow-fadezoom-images-wrap"
            style="width: 0px;"
          >
            <div
              aria-hidden="false"
              aria-roledescription="slide"
              data-index="0"
              style="opacity: 1; z-index: 1; width: 0px; left: 0px; display: block;"
            >
              <a
                css="[object Object]"
                href="/picture/uid-1"
                title="title1"
              >
                <figure
                  css="[object Object]"
                >
                  <picture>
                    <img
                      alt="title1"
                      css="[object Object]"
                      image="[object Object]"
                    />
                  </picture>
                  <figcaption
                    css="[object Object]"
                  >
                    title1
                  </figcaption>
                </figure>
              </a>
            </div>
            <div
              aria-hidden="true"
              aria-roledescription="slide"
              data-index="1"
              style="opacity: 0; z-index: 0; width: 0px; left: 0px; display: block;"
            >
              <a
                css="[object Object]"
                href="/picture/uid-2"
                title="title2"
              >
                <figure
                  css="[object Object]"
                >
                  <picture>
                    <img
                      alt="title2"
                      css="[object Object]"
                      image="[object Object]"
                    />
                  </picture>
                  <figcaption
                    css="[object Object]"
                  >
                    title2
                  </figcaption>
                </figure>
              </a>
            </div>
          </div>
        </div>
        <button
          aria-label="Next Slide"
          class="isFullscreen nav "
          css="[object Object]"
          data-type="next"
          tabindex="11"
          type="button"
        >
          »
        </button>
      </div>
      <ul
        class="indicators"
      >
        <li
          aria-label="Go to slide 1"
          class="indicator active"
          data-key="0"
          title="title1"
        >
          <figure>
            <picture>
              <img
                alt="title1"
                css="[object Object]"
                height="31"
                image="[object Object]"
                width="46"
              />
            </picture>
            <figcaption
              css="[object Object]"
            >
              title1
            </figcaption>
          </figure>
        </li>
        <li
          aria-label="Go to slide 2"
          class="indicator "
          data-key="1"
          title="title2"
        >
          <figure>
            <picture>
              <img
                alt="title2"
                css="[object Object]"
                height="31"
                image="[object Object]"
                width="46"
              />
            </picture>
            <figcaption
              css="[object Object]"
            >
              title2
            </figcaption>
          </figure>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Slideshow renders correctly with a list of one 1`] = `
<div>
  <div
    class="slide-container"
  >
    <div
      aria-roledescription="carousel"
      dir="ltr"
    >
      <div
        class="react-slideshow-container "
      >
        <button
          aria-label="Previous Slide"
          class="isFullscreen nav "
          css="[object Object]"
          data-type="prev"
          tabindex="10"
          type="button"
        >
          «
        </button>
        <div
          class="react-slideshow-fadezoom-wrapper "
        >
          <div
            class="react-slideshow-fadezoom-images-wrap"
            style="width: 0px;"
          >
            <div
              aria-hidden="false"
              aria-roledescription="slide"
              data-index="0"
              style="opacity: 1; z-index: 1; width: 0px; left: 0px; display: block;"
            >
              <a
                css="[object Object]"
                href="/picture/uid-bar"
                title="title1"
              >
                <figure
                  css="[object Object]"
                >
                  <picture>
                    <img
                      alt="title1"
                      css="[object Object]"
                      image="[object Object]"
                    />
                  </picture>
                  <figcaption
                    css="[object Object]"
                  >
                    title1
                  </figcaption>
                </figure>
              </a>
            </div>
          </div>
        </div>
        <button
          aria-label="Next Slide"
          class="isFullscreen nav "
          css="[object Object]"
          data-type="next"
          tabindex="11"
          type="button"
        >
          »
        </button>
      </div>
      <ul
        class="indicators"
      >
        <li
          aria-label="Go to slide 1"
          class="indicator active"
          data-key="0"
          title="title1"
        >
          <figure>
            <picture>
              <img
                alt="title1"
                css="[object Object]"
                height="31"
                image="[object Object]"
                width="46"
              />
            </picture>
            <figcaption
              css="[object Object]"
            >
              title1
            </figcaption>
          </figure>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Slideshow renders correctly with a list of zero 1`] = `
<div>
  <div
    class="slide-container"
  >
    <div
      aria-roledescription="carousel"
      dir="ltr"
    >
      <div
        class="react-slideshow-container "
      >
        <button
          aria-label="Previous Slide"
          class=" nav "
          css="[object Object]"
          data-type="prev"
          tabindex="10"
          type="button"
        >
          «
        </button>
        <div
          class="react-slideshow-fadezoom-wrapper "
        >
          <div
            class="react-slideshow-fadezoom-images-wrap"
            style="width: 0px;"
          />
        </div>
        <button
          aria-label="Next Slide"
          class=" nav "
          css="[object Object]"
          data-type="next"
          tabindex="11"
          type="button"
        >
          »
        </button>
      </div>
      <ul
        class="indicators"
      />
    </div>
  </div>
</div>
`;
